# dendro

./: CMakeLists.txt  Makefile  anemonix.yaml  dendro  dendro.spec  info  main.cpp  post-build.sh  pre-build.sh  spec.yaml
src/: main.cpp
src/buildsystem/: Buildsystem.h  build.cpp  checkDependencies.cpp  createPackage.cpp  downloadURL.cpp  executeScript.cpp  extractAndFlattenTarball.cpp  generateAnemonixYaml.cpp  handleGitSource.cpp  importGpgKeys.cpp  processSource.cpp  process_package.cpp
src/core/: Package.cpp  Package.h
src/parser/: Parser.cpp  Parser.h
src/utils/: colors.h
